adjusted images to display correctly on mobile

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -27,9 +27,12 @@
 }
 .portfolio-img {
     background-image: url('https://i.imgur.com/v70uHVZ.png');
+    background-size: cover;
+
 }
 .zen-img {
     background-image: url('https://i.imgur.com/9vvFrxa.png');
+    background-size: cover;
 }
 .foodspot-img {
     background-image: url('https://i.imgur.com/nLpwMAk.jpg');
